[package]
name = "listen_radio_host"
version = "0.1.0"
authors = ["hugh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0"
rodio = "0.13.1"
rand = "0.8.3"
